--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "./index.js",
   "dependencies": {
-    "tower/template": "*",
-    "tower/scope": "*"
+    "tower-template": "*",
+    "tower-content": "*"
   }
 }
